sumo/tests/od2trips/errors/o/o_time_begin_false/input_od_or.fma
$OR;D2
* From-Time  To-Time
a 1.00
* Factor
1.00
*
* some
* additional
* comments
         1          2          100

